--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    raunak main
+    raunak main Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    Similique animi beatae perspiciatis, perferendis nisi quisquam?
   </body>
 </html>
